// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result should display an error if an error object is passed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    error={
        Object {
            "error": "stuff",
            "errorCode": 500,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p>
          Result could not be displayed
</p>,
        <p>
          error code: 
          500
</p>,
        <p>
          error message: 
          stuff
</p>,
      ],
      "className": "Result",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Result could not be displayed",
        },
        "ref": null,
        "rendered": "Result could not be displayed",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "error code: ",
            500,
          ],
        },
        "ref": null,
        "rendered": Array [
          "error code: ",
          500,
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "error message: ",
            "stuff",
          ],
        },
        "ref": null,
        "rendered": Array [
          "error message: ",
          "stuff",
        ],
        "type": "p",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p>
            Result could not be displayed
</p>,
          <p>
            error code: 
            500
</p>,
          <p>
            error message: 
            stuff
</p>,
        ],
        "className": "Result",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Result could not be displayed",
          },
          "ref": null,
          "rendered": "Result could not be displayed",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "error code: ",
              500,
            ],
          },
          "ref": null,
          "rendered": Array [
            "error code: ",
            500,
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "error message: ",
              "stuff",
            ],
          },
          "ref": null,
          "rendered": Array [
            "error message: ",
            "stuff",
          ],
          "type": "p",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Result should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p>
          example url: 
</p>,
        <p>
          https://www.wsj.com/articles/like-peter-thiel-others-feel-alienated-by-silicon-valley-groupthink-1518962400
</p>,
        <p>
          https://www.bloomberg.com/news/articles/2018-01-09/trump-loving-farmers-let-him-know-that-they-also-love-free-trade
</p>,
        <p>
          https://www.cnn.com/travel/article/passenger-planes-future-look/index.html
</p>,
        <p>
          http://www.independent.co.uk/voices/holocaust-israel-poland-history-difficult-acknowledge-netanyahu-jewish-polish-government-a8212071.html
</p>,
        <p>
          https://www.washingtonpost.com/?utm_term=.4205470b3748
</p>,
        <p>
          https://www.theonion.com/nra-calls-for-teachers-to-keep-loaded-gun-pointed-at-cl-1819575763?utm_content=Main&utm_campaign=SF&utm_source=Facebook&utm_medium=SocialMarketing
</p>,
        <p>
          http://www.bbc.com/news/world-us-canada-43088644
</p>,
        <p>
          http://www.dancemagazine.com/peter-martins-nycb-investigation-results-2535425336.html?utm_campaign=RebelMouse&socialux=facebook&share_id=3329042&utm_medium=social&utm_content=Dance+Magazine&utm_source=facebook
</p>,
        <p>
          https://www.rd.com/advice/parenting/stop-bullying-strategy/
</p>,
      ],
      "className": "Result",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "example url: ",
        },
        "ref": null,
        "rendered": "example url: ",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "https://www.wsj.com/articles/like-peter-thiel-others-feel-alienated-by-silicon-valley-groupthink-1518962400",
        },
        "ref": null,
        "rendered": "https://www.wsj.com/articles/like-peter-thiel-others-feel-alienated-by-silicon-valley-groupthink-1518962400",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "https://www.bloomberg.com/news/articles/2018-01-09/trump-loving-farmers-let-him-know-that-they-also-love-free-trade",
        },
        "ref": null,
        "rendered": "https://www.bloomberg.com/news/articles/2018-01-09/trump-loving-farmers-let-him-know-that-they-also-love-free-trade",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "https://www.cnn.com/travel/article/passenger-planes-future-look/index.html",
        },
        "ref": null,
        "rendered": "https://www.cnn.com/travel/article/passenger-planes-future-look/index.html",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "http://www.independent.co.uk/voices/holocaust-israel-poland-history-difficult-acknowledge-netanyahu-jewish-polish-government-a8212071.html",
        },
        "ref": null,
        "rendered": "http://www.independent.co.uk/voices/holocaust-israel-poland-history-difficult-acknowledge-netanyahu-jewish-polish-government-a8212071.html",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "https://www.washingtonpost.com/?utm_term=.4205470b3748",
        },
        "ref": null,
        "rendered": "https://www.washingtonpost.com/?utm_term=.4205470b3748",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "https://www.theonion.com/nra-calls-for-teachers-to-keep-loaded-gun-pointed-at-cl-1819575763?utm_content=Main&utm_campaign=SF&utm_source=Facebook&utm_medium=SocialMarketing",
        },
        "ref": null,
        "rendered": "https://www.theonion.com/nra-calls-for-teachers-to-keep-loaded-gun-pointed-at-cl-1819575763?utm_content=Main&utm_campaign=SF&utm_source=Facebook&utm_medium=SocialMarketing",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "http://www.bbc.com/news/world-us-canada-43088644",
        },
        "ref": null,
        "rendered": "http://www.bbc.com/news/world-us-canada-43088644",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "http://www.dancemagazine.com/peter-martins-nycb-investigation-results-2535425336.html?utm_campaign=RebelMouse&socialux=facebook&share_id=3329042&utm_medium=social&utm_content=Dance+Magazine&utm_source=facebook",
        },
        "ref": null,
        "rendered": "http://www.dancemagazine.com/peter-martins-nycb-investigation-results-2535425336.html?utm_campaign=RebelMouse&socialux=facebook&share_id=3329042&utm_medium=social&utm_content=Dance+Magazine&utm_source=facebook",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "https://www.rd.com/advice/parenting/stop-bullying-strategy/",
        },
        "ref": null,
        "rendered": "https://www.rd.com/advice/parenting/stop-bullying-strategy/",
        "type": "p",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p>
            example url: 
</p>,
          <p>
            https://www.wsj.com/articles/like-peter-thiel-others-feel-alienated-by-silicon-valley-groupthink-1518962400
</p>,
          <p>
            https://www.bloomberg.com/news/articles/2018-01-09/trump-loving-farmers-let-him-know-that-they-also-love-free-trade
</p>,
          <p>
            https://www.cnn.com/travel/article/passenger-planes-future-look/index.html
</p>,
          <p>
            http://www.independent.co.uk/voices/holocaust-israel-poland-history-difficult-acknowledge-netanyahu-jewish-polish-government-a8212071.html
</p>,
          <p>
            https://www.washingtonpost.com/?utm_term=.4205470b3748
</p>,
          <p>
            https://www.theonion.com/nra-calls-for-teachers-to-keep-loaded-gun-pointed-at-cl-1819575763?utm_content=Main&utm_campaign=SF&utm_source=Facebook&utm_medium=SocialMarketing
</p>,
          <p>
            http://www.bbc.com/news/world-us-canada-43088644
</p>,
          <p>
            http://www.dancemagazine.com/peter-martins-nycb-investigation-results-2535425336.html?utm_campaign=RebelMouse&socialux=facebook&share_id=3329042&utm_medium=social&utm_content=Dance+Magazine&utm_source=facebook
</p>,
          <p>
            https://www.rd.com/advice/parenting/stop-bullying-strategy/
</p>,
        ],
        "className": "Result",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "example url: ",
          },
          "ref": null,
          "rendered": "example url: ",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "https://www.wsj.com/articles/like-peter-thiel-others-feel-alienated-by-silicon-valley-groupthink-1518962400",
          },
          "ref": null,
          "rendered": "https://www.wsj.com/articles/like-peter-thiel-others-feel-alienated-by-silicon-valley-groupthink-1518962400",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "https://www.bloomberg.com/news/articles/2018-01-09/trump-loving-farmers-let-him-know-that-they-also-love-free-trade",
          },
          "ref": null,
          "rendered": "https://www.bloomberg.com/news/articles/2018-01-09/trump-loving-farmers-let-him-know-that-they-also-love-free-trade",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "https://www.cnn.com/travel/article/passenger-planes-future-look/index.html",
          },
          "ref": null,
          "rendered": "https://www.cnn.com/travel/article/passenger-planes-future-look/index.html",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "http://www.independent.co.uk/voices/holocaust-israel-poland-history-difficult-acknowledge-netanyahu-jewish-polish-government-a8212071.html",
          },
          "ref": null,
          "rendered": "http://www.independent.co.uk/voices/holocaust-israel-poland-history-difficult-acknowledge-netanyahu-jewish-polish-government-a8212071.html",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "https://www.washingtonpost.com/?utm_term=.4205470b3748",
          },
          "ref": null,
          "rendered": "https://www.washingtonpost.com/?utm_term=.4205470b3748",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "https://www.theonion.com/nra-calls-for-teachers-to-keep-loaded-gun-pointed-at-cl-1819575763?utm_content=Main&utm_campaign=SF&utm_source=Facebook&utm_medium=SocialMarketing",
          },
          "ref": null,
          "rendered": "https://www.theonion.com/nra-calls-for-teachers-to-keep-loaded-gun-pointed-at-cl-1819575763?utm_content=Main&utm_campaign=SF&utm_source=Facebook&utm_medium=SocialMarketing",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "http://www.bbc.com/news/world-us-canada-43088644",
          },
          "ref": null,
          "rendered": "http://www.bbc.com/news/world-us-canada-43088644",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "http://www.dancemagazine.com/peter-martins-nycb-investigation-results-2535425336.html?utm_campaign=RebelMouse&socialux=facebook&share_id=3329042&utm_medium=social&utm_content=Dance+Magazine&utm_source=facebook",
          },
          "ref": null,
          "rendered": "http://www.dancemagazine.com/peter-martins-nycb-investigation-results-2535425336.html?utm_campaign=RebelMouse&socialux=facebook&share_id=3329042&utm_medium=social&utm_content=Dance+Magazine&utm_source=facebook",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "https://www.rd.com/advice/parenting/stop-bullying-strategy/",
          },
          "ref": null,
          "rendered": "https://www.rd.com/advice/parenting/stop-bullying-strategy/",
          "type": "p",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
